# one

./: .gitignore  404.html  Dockerfile  LICENSE  deploy.md  index.html  index.txt  pyproject.toml  record.md  ubuntu.sources
.github/actions/setup-poetry/: action.yml
.github/workflows/: docker.yml  one.yml  python.yml
_next/static/chunks/: 517-6d502895ce769e93.js  970-0378ca8cdbaef597.js  main-852ac5617a02ff35.js  main-app-3ae7f4e5b80aa60e.js  webpack-db08aac3b0921949.js
_next/static/chunks/app/: layout-79fa2d2c7c62aaf4.js  layout-c8663f992ea0a2cc.js
_next/static/css/: e06fd83e5f588537.css
docker/: .env  docker-compose-base.yml  docker-compose.yml  entrypoint.sh  worker.sh
server/: .env  asgi.py
server/app/: app.py  celery_app.py  config.py
server/app/api/: test.py  user.py
server/app/api/auth/: __init__.py
server/app/api/llm/: google.py  schema.py
server/app/api/user/: __init__.py
server/app/config/: __init__.py  auth.py  celery.py  mongo.py  redis.py
server/app/db/adapters/mongo/: __init__.py
server/app/db/adapters/mongo/motor_odm/: document.py  helpers.py  query.py
server/app/db/adapters/mysql/: __init__.py
server/app/dependencies/: cache.py
server/app/extensions/llm/: __init__.py
server/app/extensions/llm/google/: __init__.py
server/app/models/mongo/: base.py  init_indexes.py  user.py
server/app/tasks/: test_schedule_task.py  test_task.py
server/app/utils/: redis.py  tools.py
web/ui/: .dockerignore  Dockerfile  environment.d.ts  next.config.ts  package-lock.json  package.json
web/ui/docker/: entrypoint.sh  pm2.json
web/ui/prisma/: dev.db
web/ui/src/: auth.ts
web/ui/src/app/: layout.tsx
web/ui/src/app/account/login/: page.tsx
web/ui/src/app/test/: page.tsx
web/ui/src/components/sign/: sign-in.tsx
web/ui/src/context/: test-context.tsx
