[project]
name = "one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "celery-redbeat>=2.2.0",
    "databases>=0.9.0",
    "fastapi>=0.115.8",
    "fastapi-cache2>=0.2.2",
    "fastapi-pagination>=0.12.34",
    "google-generativeai>=0.8.4",
    "httpx[socks]>=0.28.1",
    "motor>=3.7.0",
    "openai>=1.63.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
